v0.5.1~dev
- Add setting to enter a fanart.tv personal API key

v0.5.0 (2016-03-04)
- Add artwork from NFO and image files
- Add option to prefer fanart with no title
- Multiple characterart can be selected
- Better web service handling

v0.4.0 (2016-02-15)
- Fix persistent notification being too persistent
- Add settings to select artwork types to automatically download
- Sort and limit posters by height, not width

v0.3.2 (2016-02-09)
- better handle rapid fire library updates
- Use persistent notification for progress
- Fix up new season detection
- Use TheTVDB id for settings

v0.3.1 (2016-02-06)
- Python 2.6 support
- Fix preview image for Isengard
- Fix caching on Android
v0.3.0 (2016-02-04)
- Watch for library updates and automatically add artwork for new items
- Add series, season, and movie artwork from fanart.tv to the library
- Add series and season artwork from TheTVDB
- Add movie and episode (fanart/stills) artwork from The Movie Database
- Select specific artwork for individual media items
- Add all missing artwork for a single item, all items, or new items added since last run